overo.conf: No UBI filesystem for now

--- a/conf/machine/overo.conf
+++ b/conf/machine/overo.conf
@@ -23,7 +23,7 @@ XSERVER = "xserver-xorg \
 
 GUI_MACHINE_CLASS = "bigscreen"
 
-IMAGE_FSTYPES += "tar.bz2 ubi"
+#IMAGE_FSTYPES += "tar.bz2 ubi"
 
 SERIAL_CONSOLE = "115200 ttyO2"
 
