--- a/conf/machine/overo.conf
+++ b/conf/machine/overo.conf
@@ -8,6 +8,7 @@ TARGET_ARCH = "arm"
 
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot"
 UBOOT_MACHINE = "omap3_overo_config"
+#PREFERRED_VERSION_u-boot = "2011.03"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-omap3"
 
