overo u-boot: Move to well maintained oe-core recipes
* run tested 2011.03
* run tested 2011.06

--- a/conf/machine/overo.conf
+++ b/conf/machine/overo.conf
@@ -8,7 +8,8 @@ TARGET_ARCH = "arm"
 
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot"
 UBOOT_MACHINE = "omap3_overo_config"
-#PREFERRED_VERSION_u-boot = "2011.03"
+PREFERRED_VERSION_pn-u-boot = "v2011.03+git%"
+#PREFERRED_VERSION_pn-u-boot = "v2011.06+git%"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-omap3"
 
