overo.conf: cleanup and add marvel-firmware

--- a/conf/machine/overo.conf
+++ b/conf/machine/overo.conf
@@ -15,17 +15,13 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-omap3"
 
 PREFERRED_PROVIDER_virtual/xserver = "xserver-xorg"
 XSERVER = "xserver-xorg \
-           xserver-xorg-extension-dri \
-           xserver-xorg-extension-glx \
            xf86-input-evdev \
            xf86-input-mouse \
            xf86-video-omapfb \
            xf86-input-keyboard"
-#           xf86-input-tslib \
+#           xf86-input-tslib
 
 GUI_MACHINE_CLASS = "bigscreen"
-
-#IMAGE_FSTYPES += "tar.bz2 ubi"
 
 SERIAL_CONSOLE = "115200 ttyO2"
 
@@ -45,9 +41,12 @@ MKUBIFS_ARGS = "-m 2048 -e 129024 -c 1996"
 UBINIZE_ARGS = "-m 2048 -p 128KiB -s 512"
 UBI_VOLNAME = "rootfs"
 
-MACHINE_EXTRA_RRECOMMENDS = " kernel-modules"
-#MACHINE_EXTRA_RRECOMMENDS += " omap3-sgx-modules"
-#MACHINE_EXTRA_RRECOMMENDS += " dsplink-module ti-cmemk-module"
-MACHINE_FEATURES = "kernel26 alsa apm ext2 screen touchscreen usbgadget usbhost vfat"
+MACHINE_EXTRA_RRECOMMENDS = "kernel-modules marvell-sdio-fw"
+
+#MACHINE_EXTRA_RRECOMMENDS += "omap3-sgx-modules"
+#MACHINE_EXTRA_RRECOMMENDS += "dsplink-module ti-cmemk-module"
+
+MACHINE_FEATURES = "kernel26 alsa apm ext2 screen usbgadget usbhost vfat"
+# touchscreen
 
 
