u-boot: move to 2011.09 supplied by meta-ti
first step on SPL support

--- a/conf/machine/overo.conf
+++ b/conf/machine/overo.conf
@@ -4,12 +4,13 @@
 
 require conf/machine/include/omap3.inc
 
-TARGET_ARCH = "arm"
+# SPL build
+#EXTRA_IMAGEDEPENDS = "u-boot"
 
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot"
 UBOOT_MACHINE = "omap3_overo_config"
-PREFERRED_VERSION_pn-u-boot = "v2011.03+git%"
-#PREFERRED_VERSION_pn-u-boot = "v2011.06+git%"
+#PREFERRED_VERSION_pn-u-boot = "v2011.03+git%"
+PREFERRED_VERSION_pn-u-boot = "2011.09"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-omap3"
 
