--- a/conf/machine/overo.conf
+++ b/conf/machine/overo.conf
@@ -5,7 +5,7 @@
 require conf/machine/include/omap3.inc
 
 # SPL build
-#EXTRA_IMAGEDEPENDS = "u-boot"
+EXTRA_IMAGEDEPENDS = "u-boot"
 
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot"
 UBOOT_MACHINE = "omap3_overo_config"
