--- a/conf/machine/overo.conf
+++ b/conf/machine/overo.conf
@@ -12,7 +12,7 @@ UBOOT_MACHINE = "omap3_overo_config"
 #PREFERRED_VERSION_pn-u-boot = "v2011.03+git%"
 PREFERRED_VERSION_pn-u-boot = "2011.09"
 
-PREFERRED_PROVIDER_virtual/kernel = "linux-omap3"
+PREFERRED_PROVIDER_virtual/kernel = "linux"
 
 PREFERRED_PROVIDER_virtual/xserver = "xserver-xorg"
 XSERVER = "xserver-xorg \
