--- a/conf/machine/overo.conf
+++ b/conf/machine/overo.conf
@@ -26,7 +26,8 @@ GUI_MACHINE_CLASS = "bigscreen"
 
 SERIAL_CONSOLE = "115200 ttyO2"
 
-IMAGE_FSTYPES += "ubi tar.bz2"
+IMAGE_FSTYPES += "tar.bz2"
+# IMAGE_FSTYPES += "ubi tar.bz2"
 
 # do ubiattach /dev/ubi_ctrl -m 4
 # From dmesg:
