overo.conf: prepare task-ti-drivers and cleanup

--- a/conf/machine/overo.conf
+++ b/conf/machine/overo.conf
@@ -4,9 +4,7 @@
 
 require conf/machine/include/omap3.inc
 
-# SPL build
 EXTRA_IMAGEDEPENDS = "u-boot"
-
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot"
 UBOOT_MACHINE = "omap3_overo_config"
 PREFERRED_VERSION_pn-u-boot = "2011.12"
@@ -45,11 +43,8 @@ UBINIZE_ARGS = "-m 2048 -p 128KiB -s 512"
 UBI_VOLNAME = "rootfs"
 
 MACHINE_EXTRA_RRECOMMENDS = "kernel-modules marvell-sdio-fw"
-
-#MACHINE_EXTRA_RRECOMMENDS += "omap3-sgx-modules"
-#MACHINE_EXTRA_RRECOMMENDS += "dsplink-module ti-cmemk-module"
+#task-ti-drivers
 
 MACHINE_FEATURES = "kernel26 alsa apm ext2 screen usbgadget usbhost vfat"
 # touchscreen
-
 
