linux: take also linux-mainline under control of linux-versions-overo.inc + cosmetics

--- a/conf/machine/overo.conf
+++ b/conf/machine/overo.conf
@@ -9,22 +9,26 @@ require conf/machine/include/omap3.inc
 EXTRA_IMAGEDEPENDS = "u-boot"
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot"
 UBOOT_MACHINE = "omap3_overo_config"
-PREFERRED_VERSION_pn-u-boot = "2012.07"
+PREFERRED_VERSION_u-boot = "2012.07"
 
 ###############################################################################
 # kernel
 
 require recipes-kernel/linux/linux-versions-overo.inc
 
+PREFERRED_PROVIDER_virtual/kernel               = "${PREF_KERNEL_PROVIDER}"
+
+# this should be PREFERRED_VERSION_virtual/kernel but this is not implemented
+# choosing other kernels than linux-omap might cause warnings
 PREFERRED_VERSION_linux-omap                    = "${PREF_KERNEL_PV}"
 PREFERRED_VERSION_linux-libc-headers            = "${PREF_KERNEL_PV}"
 PREFERRED_VERSION_linux-libc-headers-native     = "${PREF_KERNEL_PV}"
 PREFERRED_VERSION_linux-libc-headers-nativesdk  = "${PREF_KERNEL_PV}"
+
 # overwrite Angstrom
 LINUX_LIBC_HEADERS_VERSION                      = "${PREF_KERNEL_PV}"
 # oe-core tcmode-default.inc
 LINUXLIBCVERSION                                = "${PREF_KERNEL_PV}"
-
 
 SERIAL_CONSOLE = "115200 ttyO2"
 
