--- a/conf/machine/overo.conf
+++ b/conf/machine/overo.conf
@@ -31,8 +31,9 @@ XSERVER = "xserver-xorg \
            xf86-input-evdev \
            xf86-input-mouse \
            xf86-video-omapfb \
-           xf86-input-keyboard"
-#           xf86-input-tslib
+           xf86-input-keyboard \
+           xf86-input-tslib \
+"
 
 ###############################################################################
 # UBI
