--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -4,6 +4,6 @@ BBPATH .= ":${LAYERDIR}"
 # We have a recipes directory, add to BBFILES
 BBFILES += "${LAYERDIR}/recipes*/*/*.bb ${LAYERDIR}/recipes*/*/*.bbappend"
 
-BBFILE_COLLECTIONS += "meta-gumstix"
-BBFILE_PATTERN_meta-gumstix := "^${LAYERDIR}/"
-BBFILE_PRIORITY_meta-gumstix = "11"
+BBFILE_COLLECTIONS += "meta-gumstix-community"
+BBFILE_PATTERN_meta-gumstix-community := "^${LAYERDIR}/"
+BBFILE_PRIORITY_meta-gumstix-community = "11"
