--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -2,7 +2,12 @@
 BBPATH .= ":${LAYERDIR}"
 
 # We have a recipes directory, add to BBFILES
-BBFILES += "${LAYERDIR}/recipes*/*/*.bb ${LAYERDIR}/recipes*/*/*.bbappend"
+BBFILES += " \
+  ${LAYERDIR}/recipes*/*/*.bb \
+  ${LAYERDIR}/recipes*/*/*.bbappend \
+  ${@base_contains('BBFILE_COLLECTIONS', 'meta-gumstix-community',\
+                   '', '${LAYERDIR}/invalid.bb', d)} \
+"
 
 BBFILE_COLLECTIONS += "meta-gumstix-community"
 BBFILE_PATTERN_meta-gumstix-community := "^${LAYERDIR}/"
