overo.conf: support meta-ti ti-dsplink builds
Suggestion from http://www.sleepyrobot.com/?p=210 via
http://gumstix.8.n6.nabble.com/gles-and-dsp-support-in-the-official-yocto-layer-tc4965764.html

Signed-off-by: Peter A. Bigot <pab@pabigot.com>

--- a/conf/machine/overo.conf
+++ b/conf/machine/overo.conf
@@ -62,3 +62,5 @@ MACHINE_EXTRA_RRECOMMENDS = "kernel-modules linux-firmware-sd8686 libgles-omap3 
 MACHINE_FEATURES = "kernel26 alsa apm ext2 screen usbgadget usbhost vfat"
 # touchscreen
 
+# TI dsplink
+TOOLCHAIN_PATH ?= "${STAGING_DIR_NATIVE}${prefix_native}/bin/${TUNE_PKGARCH}${HOST_VENDOR}-${HOST_OS}"
